--- a/Module 14/selectors.css
+++ b/Module 14/selectors.css
@@ -28,4 +28,7 @@ input:focus{
 }
 input:out-of-range{border: 2px; background-color: darksalmon;
 }
-p:first-of-type{background-color: bisque; ! important;}
+p:first-of-type{background-color: bisque; }
+p::first-letter{font-weight: bold;}
+p::first-line{font-family: sans-serif;}
+p::after{content:url(image.123.jpg);width: 5%;}
