--- a/Module 15/position.css
+++ b/Module 15/position.css
@@ -1,35 +1,46 @@
-.ststatic{
-    border: 1px;
+.static{
+    border: 1px solid hotpink;
     width: 360px;
     height: 300px;
     position: static;
     padding: 10px;
+    left:600px;
+    top:50px;
 }
 .relative{
-    border: 1px;
+    border: 1px solid hotpink;
     width: 360px;
     height: 300px;
-    position: static;
+    position: relative;
     padding: 10px;
+    left:600px;
+    top:50px;
 }
 .absolute{
-    border: 1px;
-    width: 360px;
-    height: 300px;
-    position: static;
+    border: 1px solid hotpink;
+    width: 60px;
+    height: 60px;
+    position: absolute;
     padding: 10px;
+    left: calc(60% - 30px);
+    top: calc(60% - 30px);
+    right: 50%;
 }
 .sticky{
-    border: 1px;
+    border: 1px solid hotpink;
     width: 360px;
     height: 300px;
-    position: static;
+    position: sticky;
     padding: 10px;
+    left:600px;
+    top:50px;
 }
 .fixed{
-    border: 1px;
+    border: 1px solid hotpink;
     width: 360px;
     height: 300px;
-    position: static;
+    position: fixed;
     padding: 10px;
+    left:600px;
+    top:50px;
 }
