--- a/Module 20/module.css
+++ b/Module 20/module.css
@@ -1,7 +1,77 @@
-body{
-    margin: 0;
-    font-family: "Titillium Web", sans-serif;
-}
 #section-1{
-    background-color: #87509c;
-}
+    background-color: #87509c; 
+ }
+ body{
+     margin: 0;
+     font-family: "Titillium Web" , sans-serif;
+ }
+ #section-1 > div{
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     padding: 0 150px;
+ 
+ }
+ nav ul li a{
+     text-decoration: none;
+     color: white;
+ }
+ nav ul li{
+     display: inline-block;
+     padding: 10px 15px;
+ }
+ 
+ #section-2 {
+     background-color: #17c2a4;
+     min-height: 745px;
+     color: white;
+ }
+ 
+ .title-box {
+     text-align: center;
+     max-width: 609px;
+     margin-left: auto;
+     margin-right: auto;
+ }
+ .title-box h2 {
+     margin-top: 0px;
+     margin-bottom: 10px;
+     padding-top: 100px;
+     font-size: 40px;
+     text-transform: uppercase;
+     font-weight: bold;
+ }
+ 
+ .title-box .line {
+     width: 87px;
+     height: 4px;
+     background-color: rgba(0, 0, 0 0.15);
+     margin-right: auto;
+     margin-left: auto;
+ }
+ .services-box {
+     margin-top: 80px;
+     display: flex;
+     margin-right: auto;
+     margin-left: auto;
+     width: 90%;
+     padding-bottom: 100px;
+ }
+ .service {
+     width: 24%;
+     margin-left: auto;
+     margin-right: auto;
+     text-align: center;
+ }
+ .service h3 {
+     font-size: 24px;
+     font-weight: bold;
+     text-transform: uppercase;
+     margin-top: 60px;
+ }
+ 
+ .service p {
+     font-size: 16px;
+     line-height: 26px;
+ 
+ }
