--- a/Module 21/responsive.css
+++ b/Module 21/responsive.css
@@ -1,12 +1,24 @@
-@media(max-width:600px){
-.p1{
-background-color: hotpink;
-color: aqua;
-}
-}
-@media(min-width:1000px){
-.p1{
-background-color: blueviolet;
-color:green ;
-}
-}
+
+@media (max-width: 600px) {
+    .p1 {
+      background-color: hotpink;
+      color: aqua;
+    }
+  }
+  
+
+  @media (min-width: 1000px) {
+    .p1 {
+      background-color: blueviolet;
+      color: green;
+    }
+  }
+  
+ 
+  @media (min-width: 601px) and(max-width: 999px) {
+    .p1 {
+      background-color: lightgray;
+      color: black;
+    }
+  }
+  
