--- a/Projekt/home.css
+++ b/Projekt/home.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -7,20 +6,38 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: white;
+    color: gray;
     line-height: 1.6;
 }
 
+#section {
+    background-color: red; 
+    min-height: 100vh;
+}
+
 header {
-    background-color: #111;
-    color: #fff;
+    background-color: black;
+    color: white;
     text-align: center;
-    padding: 20px;
+    padding: 50px;
 }
 
 h1 {
     font-size: 2.5rem;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+.centered-image {
+    max-width: 50%; 
+    height: 200px;
+    border-radius: 3%;
+    box-shadow: 1px 10px;
 }
 
 .car-details {
@@ -28,7 +45,7 @@ h1 {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    background-color: #fff;
+    background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -78,7 +95,7 @@ textarea {
     padding: 10px;
     margin: 10px 0;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid wheat;
 }
 
 .submit-button {
@@ -94,14 +111,4 @@ textarea {
 
 .submit-button:hover {
     background-color: #123e6b;
-}
-
-footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #111;
-    color: white;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
 }
