--- a/Module 35/style.css
+++ b/Module 35/style.css
@@ -1,18 +1,31 @@
-.slide{
-    width: 100%;
+nav{
+    overflow: hidden;
+    background-color: blue;
+    position: relative;
+    max-width: 400px;
 }
 
-.prev, .next{
-    cursor: pointer;
+nav #mylinks{
+    display: none;
+
+}
+nav a, button{
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+nav button.icon{
+    background-color: blue;
+    display: block;
     position: absolute;
-    top: 50%;
-    padding: 20px;
+    margin-top: 10px;
+    right: 10px;
+    top: o;
 }
-
-.next{
-    right: 0;
-}
-
-.prev:hover, .next:hover{
-    background-color: rgba(0,0,0,0.8);
+nav a:hover{
+    background-color: lightgray;
+    color: black;
 }
